// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`asset label component should render for ERC-20 asset 1`] = `
<a
  class="link__InternalLink-sc-1m1n17q-1 kIJfjy"
  href="/tokens/0x12345"
>
  Wrapped Ether
   
   
  (
  WETH
  )
</a>
`;

exports[`asset label component should render for ERC-721 asset 1`] = `
<a
  class="link__OutboundLink-sc-1m1n17q-0 dFkevI"
  href="https://opensea.io/assets/0x12345/999"
  rel="noopener noreferrer"
  target="_blank"
>
  CryptoKitties
   
  #
  999
   
  (
  CK
  )
</a>
`;

exports[`asset label component should render for unknown token 1`] = `
<a
  class="link__OutboundLink-sc-1m1n17q-0 dFkevI"
  href="https://opensea.io/assets/0x12345/999"
  rel="noopener noreferrer"
  target="_blank"
>
  Unknown
   
  #
  999
   
</a>
`;
